# GuaCAMOLE

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
demo_data/: .gitignore  SRR12996245.1pct.kraken.bz2  SRR12996245.1pct.sh  SRR12996245.1pct_1.fastq.bz2  SRR12996245.1pct_2.fastq.bz2  SRR12996245.1pct_report.txt  SRR12996245_report.txt
demo_data/demo_db/: database150mers.kmer_distrib  gc_bin_100_kmer_150_insert_100_dist.csv  hash.k2d  opts.k2d  seqid2taxid.map  taxo.k2d
guacamole/: bracken.py  create_reference_dist.py  distributions.py  guacamole.py  io.py  library.py
guacamole.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_integration.py
